src/components/RadioOption/RadioOption.css
.level,
.category {
  position: relative;
  padding: 12px;
  border: 3px solid #fcfcfc;
  border-radius: 12px;
  cursor: pointer;
  -webkit-user-select: none;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  transition: all 0.2s ease;
  background-color: #fcfcfc;
  text-align: center;
}
.level {
  border-radius: 9999px;
}

.level__text,
.category__text {
  margin: 0;
}

.level input[type="radio"],
.category input[type="radio"] {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}

.level:hover,
category:hover {
  border-color: #e9b0c1;
}

/* Checked state */
.level:has(input[type="radio"]:checked),
.category:has(input[type="radio"]:checked) {
  border-color: #e68ca7;
}

.category {
  display: grid;
  grid-template-rows: auto;
  justify-items: center;
  width: 100%;
  aspect-ratio: 1 / 1;
  gap: 10px;
  box-sizing: border-box;
}

.category__image-container {
  width: 100%;
  overflow: hidden;
}

.category__image {
  width: 100%;
  object-fit: contain;
}

.category__text {
  font-size: 14px;
  font-weight: 600;
}

.level__text {
  font-weight: 600;
  color: #352872;
}

